create v3 test branch,for change ss58 prefix

--- a/frame/vm-bridge/Cargo.toml
+++ b/frame/vm-bridge/Cargo.toml
@@ -16,15 +16,15 @@ log = { version = "0.4.14", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = ['alloc'] }
 #getrandom = { version = "0.2", features = ["js"] }
 
-frame-support = { version = "3.0.0", default-features = false}
-frame-system = { version = "3.0.0", default-features = false }
-sp-core = { version = "3.0.0", default-features = false}
-sp-io = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false }
-pallet-contracts = { version = "3.0.0", default-features = false}
-pallet-evm = {version = "5.0.0", default-features = false,  git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fp-evm = {version = "2.0.0", default-features = false,  git = "https://github.com/CycanTech/frontier",branch = "v3" }
+frame-support = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+frame-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-std = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-contracts = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+pallet-evm = { default-features = false,  git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fp-evm = { default-features = false,  git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
 byte-slice-cast= { version = "1.0.0", default-features = false }
 sha3 = { version = "0.8", default-features = false }
@@ -37,13 +37,13 @@ hex-literal = "0.3"
 paste = "1"
 pretty_assertions = "0.7"
 wat = "1"
-pallet-balances = { version = "3.0.0" }
-pallet-timestamp = { version = "3.0.0" }
-pallet-randomness-collective-flip = { version = "3.0.0"}
+pallet-balances = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-randomness-collective-flip = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
 
-pallet-evm-precompile-simple = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+pallet-evm-precompile-simple = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 pallet-evm-precompile-call-vm = { version = "0.1.0", path = "../evm/precompile/call-vm" }
-ink_env = { git = "https://github.com/paritytech/ink",  version = "3.0.0-rc3" }
+#ink_env = { git = "https://github.com/paritytech/ink",  version = "3.0.0-rc3" }
 
 [features]
 default = ["std"]
