--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ members = [
 	"frame/rgrandpa",
 	"frame/esbind",
 #	"frame/upgrade-test",
-	"node/cycan",
-	"runtime/cycan",
+	"node/phoenix",
+#	"runtime/cycan",
 	"runtime/phoenix",
 ]
 
