--- a/frame/esbind/Cargo.toml
+++ b/frame/esbind/Cargo.toml
@@ -12,29 +12,29 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
-frame-system = { default-features = false, version = '3.0.0' }
-frame-support = { default-features = false, version = '3.0.0'}
-frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
-sp-std = { default-features = false, version = '3.0.0' }
+frame-system = { default-features = false ,git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+frame-support = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-std = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 log = { version = "0.4.14", default-features = false }
-sp-runtime = { default-features = false, version = '3.0.0' }
-sp-core = { version = "3.0.0", default-features = false }
-sp-application-crypto = { version = "3.0.0", default-features = false }
+sp-runtime = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-core = {  default-features = false ,git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+sp-application-crypto = {  default-features = false ,git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
 serde = { version = "1.0.101", optional = true }
-sp-io = { version = "3.0.0", default-features = false }
-pallet-evm = {version = "5.0.0", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
+sp-io = {  default-features = false ,git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+pallet-evm = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 libsecp256k1 = { version = "0.6", default-features = false, features = ["hmac", "static-context"], optional = true }
 sha3 = { version = "0.8", default-features = false }
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
-sp-core = { version = '3.0.0' }
-sp-io = { version = '3.0.0' }
-sp-runtime = { version = '3.0.0'  }
-pallet-balances = { version = "3.0.0" }
-pallet-timestamp = { version = "3.0.0" }
-pallet-evm = {version = "5.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-ethereum = {version = "3.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }
+pallet-balances = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-evm = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-ethereum = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
 [features]
 default = ['std']
