--- a/frame/evm/precompile/call-vm/Cargo.toml
+++ b/frame/evm/precompile/call-vm/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2018"
 description = "CallWasmC precompiles for EVM pallet."
 
 [dependencies]
-sp-core = { version = "3.0.0", default-features = false }
-sp-io = { version = "3.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-frame-support = { version = "3.0.0", default-features = false }
-frame-system = { version = "3.0.0", default-features = false }
-pallet-evm = {version = "5.0.0", default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3"}
-fp-evm = {version = "2.0.0", default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3" }
+sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-std = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+frame-support = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+frame-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-evm = { default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3.0.1"}
+fp-evm = { default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
 evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
 codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
