--- a/frame/rgrandpa/Cargo.toml
+++ b/frame/rgrandpa/Cargo.toml
@@ -12,32 +12,32 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
-frame-system = { default-features = false, version = '3.0.0' }
-frame-support = { default-features = false, version = '3.0.0'}
-frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
-sp-std = { default-features = false, version = '3.0.0' }
+frame-system = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+frame-support = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-std = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 log = { version = "0.4.14", default-features = false }
-pallet-session = { default-features = false, version = '3.0.0' }
-sp-runtime = { default-features = false, version = '3.0.0' }
-sp-core = { version = "3.0.0", default-features = false }
-pallet-staking = { default-features = false, version = '3.0.0' }
-sp-application-crypto = { version = "3.0.0", default-features = false }
+pallet-session = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-runtime = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-staking = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-application-crypto = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
 serde = { version = "1.0.101", optional = true }
-pallet-babe = { default-features = false, version = '3.0.0'  }
-sp-io = { version = "3.0.0", default-features = false }
-pallet-grandpa = { default-features = false, version = '3.0.0'  }
+pallet-babe = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }
+sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-grandpa = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
-sp-core = {  version = '3.0.0' }
-sp-io = { version = '3.0.0' }
-sp-runtime = { version = '3.0.0'  }
-pallet-balances = { version = "3.0.0" }
-pallet-timestamp = { version = "3.0.0" }
-pallet-staking = { version = '3.0.0' }
-pallet-staking-reward-curve = {  version = "3.0.0"}
-sp-staking = { version = "3.0.0"}
-pallet-session = { version = "3.0.0",features = ["historical"] }
+sp-core = {  git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }
+pallet-balances = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-staking-reward-curve = {  git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+sp-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+pallet-session = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",features = ["historical"] }
 
 [features]
 default = ['std']
