--- a/frame/upgrade-test/Cargo.toml
+++ b/frame/upgrade-test/Cargo.toml
@@ -10,8 +10,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.101", optional = true }
-frame-system = { default-features = false, version = '3.0.0' }
-frame-support = { default-features = false, version = '3.0.0'}
+frame-system = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+frame-support = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
 
 
 
