--- a/node/phoenix/Cargo.toml
+++ b/node/phoenix/Cargo.toml
@@ -23,62 +23,61 @@ jsonrpc-core = "15.0.0"
 jsonrpc-pubsub = "15.0.0"
 serde_json = "1.0.64"
 
-sp-api = { version = "3.0.0" }
-sp-blockchain = { version = "3.0.0" }
-sc-rpc-api = { version = "0.9.0" }
-sc-rpc = { version = "3.0.0" }
-substrate-frame-rpc-system = { version = "3.0.0" }
-pallet-transaction-payment-rpc = { version = "3.0.0" }
-sc-cli = { version = "0.9.0" }
-sp-core = { version = "3.0.0" }
-sc-executor = { version = "0.9.0" }
-sc-service = { version = "0.9.0" }
-sp-inherents = { version = "3.0.0" }
-sc-transaction-pool = { version = "3.0.0" }
-sp-transaction-pool = { version = "3.0.0" }
-sc-network = { version = "0.9.0" }
-sc-consensus-babe = { version = "0.9.0" }
-sp-consensus-babe = { version = "0.9.0" }
-sc-consensus-manual-seal = { version = "0.9.0" }
-sp-consensus = { version = "0.9.0" }
-sc-consensus = { version = "0.9.0" }
-sp-timestamp = { version = "3.0.0" }
-pallet-evm = {version = "5.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-ethereum = {version = "3.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-dynamic-fee = {version = "3.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+sp-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-blockchain = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-rpc-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-rpc = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+substrate-frame-rpc-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-transaction-payment-rpc = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-cli = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-executor = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-service = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-inherents = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-network = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-consensus-babe = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-consensus-babe = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-consensus-manual-seal = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-consensus = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-consensus = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-evm = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-ethereum = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-dynamic-fee = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
-sc-finality-grandpa = { version = "0.9.0" }
-sp-finality-grandpa = { version = "3.0.0" }
-sc-client-api = { version = "3.0.0" }
-sp-runtime = { version = "3.0.0" }
-sc-basic-authorship = { version = "0.9.0" }
-sp-block-builder = { version = "3.0.0" }
-sc-telemetry = { version = "3.0.0" }
-frame-benchmarking-cli = { version = "3.0.0" }
-frame-benchmarking = { version = "3.0.0" }
+sc-finality-grandpa = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-finality-grandpa = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-client-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-basic-authorship = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-block-builder = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sc-telemetry = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+frame-benchmarking-cli = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+frame-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 
 
-fc-consensus = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fp-consensus = {version = "1.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+fc-consensus = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fp-consensus = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
-cycan-runtime = { path = "../../runtime/cycan" }
 phoenix-runtime = { path = "../../runtime/phoenix" }
 
-fc-rpc = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fp-rpc = {version = "2.1.0",  git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fc-rpc-core = {version = "1.1.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fc-db = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fc-mapping-sync = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+fc-rpc = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fp-rpc = {  git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fc-rpc-core = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fc-db = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fc-mapping-sync = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
 
-pallet-contracts  =  { version = '3.0.0' }
-pallet-contracts-rpc  =  { version = '3.0.0' }
+pallet-contracts  =  { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-contracts-rpc  =  { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 pallet-rgrandpa = { path = '../../frame/rgrandpa', version = '0.1.0' }
-pallet-im-online = { version = "3.0.0" }
-sp-authority-discovery = { version = "3.0.0" }
+pallet-im-online = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+sp-authority-discovery = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 
 [build-dependencies]
-substrate-build-script-utils = { version = "3.0.0" }
+substrate-build-script-utils = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 
 [features]
 default = ["babe"]
