--- a/runtime/phoenix/Cargo.toml
+++ b/runtime/phoenix/Cargo.toml
@@ -14,82 +14,82 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 static_assertions = "1.1.0"
 
-frame-executive = { version = "3.0.0", default-features = false}
-frame-support = { version = "3.0.0", default-features = false}
-frame-system = { version = "3.0.0", default-features = false, package = "frame-system" }
-frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
+frame-executive = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+frame-support = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+frame-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false, package = "frame-system" }
+frame-system-rpc-runtime-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
 
-pallet-evm = {version = "5.0.0", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-ethereum = {version = "3.0.0", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-dynamic-fee = {version = "3.0.0", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-evm-precompile-simple = {version = "2.0.0-dev", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-evm-precompile-sha3fips = {version = "2.0.0-dev", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-evm-precompile-modexp = {version = "2.0.0-dev", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fp-rpc = {version = "2.1.0", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
+pallet-evm = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-ethereum = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-dynamic-fee = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
+fp-rpc = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
 
-pallet-babe = { version = "3.0.0", default-features = false }
-sp-consensus-babe = { version = "0.9.0", default-features = false }
+pallet-babe = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-consensus-babe = { git = "https://github.com/CycanTech/substrate",branch = "v3.0.1", default-features = false }
 
-pallet-balances = { version = "3.0.0", default-features = false }
-pallet-grandpa = { version = "3.0.0", default-features = false }
-pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
-pallet-sudo = { version = "3.0.0", default-features = false }
-pallet-timestamp = { version = "3.0.0", default-features = false }
-pallet-transaction-payment = { version = "3.0.0", default-features = false }
-pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
+pallet-balances = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-grandpa = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-randomness-collective-flip = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-sudo = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-transaction-payment = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
 
-sp-api = { version = "3.0.0", default-features = false }
-sp-block-builder = {version = "3.0.0", default-features = false}
-sp-core = { version = "3.0.0", default-features = false }
-sp-inherents = { version = "3.0.0",default-features = false}
-sp-io = { version = "3.0.0", default-features = false }
-sp-offchain = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-sp-session = { version = "3.0.0", default-features = false}
-sp-std = { version = "3.0.0", default-features = false }
-sp-transaction-pool = { version = "3.0.0", default-features = false }
-sp-version = { version = "3.0.0", default-features = false }
+sp-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-block-builder = {git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-inherents = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false}
+sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-offchain = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-session = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+sp-std = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-version = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
 
 
-pallet-contracts = { default-features = false, version = '3.0.0'}
-pallet-contracts-primitives = { default-features = false, version = '3.0.0' }
-pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' }
+pallet-contracts = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
+pallet-contracts-primitives = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
+pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 log = { version = "0.4.14", default-features = false }
 pallet-evm-precompile-call-vm = {default-features = false, version = '0.1.0', path = "../../frame/evm/precompile/call-vm" }
 pallet-vm-bridge = {default-features = false, version = '0.1.0', path = "../../frame/vm-bridge" }
 
-pallet-session = { version = "3.0.0",features = ["historical"], default-features = false }
-pallet-staking = { version = "3.0.0",default-features = false }
-pallet-staking-reward-curve = {  version = "3.0.0",default-features = false}
-sp-staking = { version = "3.0.0",default-features = false }
+pallet-session = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",features = ["historical"], default-features = false }
+pallet-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false }
+pallet-staking-reward-curve = {  git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false}
+sp-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false }
 
 # benchmarking dependencies
-frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
-frame-system-benchmarking = { version = "3.0.0", default-features = false,  optional = true }
+frame-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false, optional = true }
+frame-system-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false,  optional = true }
 pallet-rgrandpa = { default-features = false, path = '../../frame/rgrandpa', version = '0.1.0' }
-pallet-im-online = { version = "3.0.0", default-features = false }
-pallet-utility = { default-features = false, version = '3.0.0'}
-pallet-offences = { version = "3.0.0", default-features = false }
-pallet-offences-benchmarking = { version = "3.0.0",  default-features = false, optional = true }
-pallet-authorship = { version = "3.0.0", default-features = false }
-pallet-indices = { version = "3.0.0", default-features = false }
-pallet-tips = { version = "3.0.0", default-features = false }
-pallet-treasury = { version = "3.0.0", default-features = false }
-pallet-bounties = { version = "3.0.0", default-features = false }
+pallet-im-online = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-utility = { default-features = false, git = "https://github.com/CycanTech/substrate",branch = "v3.0.1"}
+pallet-offences = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-offences-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",  default-features = false, optional = true }
+pallet-authorship = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-indices = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-tips = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-treasury = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-bounties = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
 
-pallet-membership = { version = "3.0.0", default-features = false }
-pallet-elections-phragmen = { version = "3.0.0", default-features = false }
-pallet-democracy = { version = "3.0.0", default-features = false }
-pallet-collective = { version = "3.0.0", default-features = false }
-pallet-scheduler = { version = "3.0.0", default-features = false }
-sp-authority-discovery = { version = "3.0.0", default-features = false}
-pallet-authority-discovery = { version = "3.0.0", default-features = false}
-pallet-multisig = { version = "3.0.0", default-features = false }
+pallet-membership = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-elections-phragmen = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-democracy = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-collective = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+pallet-scheduler = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
+sp-authority-discovery = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+pallet-authority-discovery = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
+pallet-multisig = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
 
 pallet-esbind = { default-features = false, path = '../../frame/esbind', version = '0.1.0' }
 #pallet-upgrade-test= { default-features = false, path = '../../frame/upgrade-test', version = '2.0.0' }
 [build-dependencies]
-substrate-wasm-builder = { version = "3.0.0" }
+substrate-wasm-builder = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
 
 [features]
 default = ["std", "babe"]
