--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 members = [
-	"frame/evm/precompile/call-vm",
-	"frame/vm-bridge",
-	"frame/rgrandpa",
-	"frame/esbind",
+#	"frame/evm/precompile/call-vm",
+#	"frame/vm-bridge",
+#	"frame/rgrandpa",
+#	"frame/esbind",
 #	"frame/upgrade-test",
-	"node/cycan",
-	"runtime/cycan",
+	"primitives",
+	"node/phoenix",
 	"runtime/phoenix",
 ]
 
