--- a/node/phoenix/Cargo.toml
+++ b/node/phoenix/Cargo.toml
@@ -1,89 +1,96 @@
 [package]
 name = "phoenix"
-version = "0.5.1"
-authors = ["Cycan Technologies"]
-description = "Phoenix Node"
-edition = "2018"
+version = "0.0.0"
+authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
+description = "A fresh FRAME-based Substrate node, ready for hacking."
+edition = "2021"
+license = "Unlicense"
 build = "build.rs"
-homepage = "https://cycan.network/"
-repository = "https://github.com/CycanTech/Cycan/"
-
-[[bin]]
-name = "phoenix"
-path = "src/main.rs"
+homepage = "https://substrate.io"
+repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
+publish = false
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-futures = "0.3.4"
+async-trait = "0.1"
+clap = { version = "3.0", features = ["derive"] }
+futures = "0.3"
 log = "0.4.8"
-structopt = "0.3.8"
-jsonrpc-core = "15.0.0"
-jsonrpc-pubsub = "15.0.0"
-serde_json = "1.0.64"
+jsonrpc-core = "18.0.0"
+jsonrpc-pubsub = "18.0.0"
+serde = { version = "1.0.136", features = ["derive"] }
 
-sp-api = { version = "3.0.0" }
-sp-blockchain = { version = "3.0.0" }
-sc-rpc-api = { version = "0.9.0" }
-sc-rpc = { version = "3.0.0" }
-substrate-frame-rpc-system = { version = "3.0.0" }
-pallet-transaction-payment-rpc = { version = "3.0.0" }
-sc-cli = { version = "0.9.0" }
-sp-core = { version = "3.0.0" }
-sc-executor = { version = "0.9.0" }
-sc-service = { version = "0.9.0" }
-sp-inherents = { version = "3.0.0" }
-sc-transaction-pool = { version = "3.0.0" }
-sp-transaction-pool = { version = "3.0.0" }
-sc-network = { version = "0.9.0" }
-sc-consensus-babe = { version = "0.9.0" }
-sp-consensus-babe = { version = "0.9.0" }
-sc-consensus-manual-seal = { version = "0.9.0" }
-sp-consensus = { version = "0.9.0" }
-sc-consensus = { version = "0.9.0" }
-sp-timestamp = { version = "3.0.0" }
-pallet-evm = {version = "5.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-ethereum = {version = "3.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-pallet-dynamic-fee = {version = "3.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+sp-api = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-consensus = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-core = { version = "5.0.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-runtime = { version = "5.0.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-inherents = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
 
-sc-finality-grandpa = { version = "0.9.0" }
-sp-finality-grandpa = { version = "3.0.0" }
-sc-client-api = { version = "3.0.0" }
-sp-runtime = { version = "3.0.0" }
-sc-basic-authorship = { version = "0.9.0" }
-sp-block-builder = { version = "3.0.0" }
-sc-telemetry = { version = "3.0.0" }
-frame-benchmarking-cli = { version = "3.0.0" }
-frame-benchmarking = { version = "3.0.0" }
+sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-cli = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
+sc-client-api = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
+sc-consensus = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-executor = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
+sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-keystore = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-network = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-rpc = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-service = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
+sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
 
+# These dependencies are used for runtime benchmarking
+frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
 
-fc-consensus = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fp-consensus = {version = "1.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
+fp-consensus = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+fp-rpc = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+fp-storage = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
 
-cycan-runtime = { path = "../../runtime/cycan" }
-phoenix-runtime = { path = "../../runtime/phoenix" }
+fc-consensus = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+fc-db = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+fc-mapping-sync = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+fc-rpc = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+fc-rpc-core = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
 
-fc-rpc = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fp-rpc = {version = "2.1.0",  git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fc-rpc-core = {version = "1.1.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fc-db = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-fc-mapping-sync = {version = "2.0.0-dev", git = "https://github.com/CycanTech/frontier",branch = "v3" }
-
-
-pallet-contracts  =  { version = '3.0.0' }
-pallet-contracts-rpc  =  { version = '3.0.0' }
-pallet-rgrandpa = { path = '../../frame/rgrandpa', version = '0.1.0' }
-pallet-im-online = { version = "3.0.0" }
-sp-authority-discovery = { version = "3.0.0" }
+pallet-base-fee = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+pallet-dynamic-fee = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+pallet-ethereum = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+pallet-evm = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
+sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+phoenix-runtime = { path = "../../runtime/phoenix", default-features = false, features = ["std"] }
+pallet-contracts-rpc = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-finality-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+node-primitives = { version = "2.0.0", default-features = false, path = "../../primitives" }
+sp-keystore = { version = "0.11.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
+sp-authorship = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
 
 [build-dependencies]
-substrate-build-script-utils = { version = "3.0.0" }
+substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
 
 [features]
-default = ["babe"]
-babe = ["phoenix-runtime/babe"]
-manual-seal = ["phoenix-runtime/manual-seal"]
+rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
 runtime-benchmarks = [
 	"phoenix-runtime/runtime-benchmarks",
 ]
